Fix BallisticTrajectorySimulation in space
- Move to separate file
- Make relative to active vessel in vacuum
- Remove max distance

--- a/BDArmory/BDArmory.csproj
+++ b/BDArmory/BDArmory.csproj
@@ -282,6 +282,7 @@
     <Compile Include="UI\ScoreWindow.cs" />
     <Compile Include="UI\VesselSpawnerWindow.cs" />
     <Compile Include="Utils\AIUtils.cs" />
+    <Compile Include="Utils\BallisticsUtils.cs" />
     <Compile Include="Utils\BDAEditorTools.cs" />
     <Compile Include="Utils\BDAMath.cs" />
     <Compile Include="Utils\BDAModuleInfos.cs" />
