Improve aiming algorithms

--- a/BDArmory/Distribution/GameData/BDArmory/Parts/TestPdc1/TestPdc1.cfg
+++ b/BDArmory/Distribution/GameData/BDArmory/Parts/TestPdc1/TestPdc1.cfg
@@ -87,8 +87,8 @@
 		SpoolUpTime = 0.1
 		roundsPerMinute = 600
 		maxDeviation = 0
-		maxEffectiveDistance = 4000
-		maxTargetingRange = 5000
+		maxEffectiveDistance = 10000
+		maxTargetingRange = 10000
 
 		ammoName = 30x173Ammo
 		bulletType = 30x173Bullet
@@ -100,16 +100,17 @@
 
 		weaponType = ballistic
 		isAPS = true
+		APSOnlyIncoming = false
 		APSType = missile
 		dualModeAPS = true
 
-		tracerLength = 100
+		tracerLength = 30
 		tracerDeltaFactor = 2.75
-		tracerInterval = 2
+		tracerInterval = 0
 
-		maxHeat = 3600
-		heatPerShot = 36
-		heatLoss = 900
+		maxHeat = 900
+		heatPerShot = 75
+		heatLoss = 600
 
 		shellScale = 0.5
 
